--- a/personal-notes-manager/.eslintrc.json
+++ b/personal-notes-manager/.eslintrc.json
@@ -1,9 +1,11 @@
-
 {
-    "extends": ["next/core-web-vitals", "eslint:recommended", "plugin:@typescript-eslint/recommended"],
-    "rules": {
-      "semi": ["error", "always"],
-      "quotes": ["error", "double"]
-    }
+  "extends": [
+    "next/core-web-vitals",
+    "eslint:recommended",
+    "plugin:@typescript-eslint/recommended"
+  ],
+  "rules": {
+    "semi": ["error", "always"],
+    "quotes": ["error", "double"]
   }
-  
+}
